<resources>
    <!-- Activity name -->
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_action_bar_hungry">I\'am hungry!</string>
    <string name="title_action_bar_workmate">Available workmates</string>

    <!-- Main activity -->
    <string name="splash_screen_text">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="error_not_connected">You must login!</string>
    <string name="error_authentication_canceled">Login canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Connection successful!</string>
    <string name="button_login_text_logged">Find a Restaurant</string>
    <string name="button_login_text_not_logged">Connection</string>

    <!-- Navigation bottom View -->
    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>

    <!-- Toolbar icon -->
    <string name="toolbar_icon_search">Search restaurants</string>

    <!-- Menu drawer-->
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="user">User name</string>
    <string name="userEmail">Email</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="delete_account">Delete account</string>
    <string name="user_name">User name</string>
    <string name="update_user_name">Update user name</string>
    <string name="login_image">login image</string>
    <string name="info_no_user_name_found">No user name found</string>
    <string name="popup_message_confirmation_delete_account">Are you sure?</string>
    <string name="popup_title">Delete account?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No!</string>
    <string name="info_no_email_found">No userEmail found</string>

    <!-- Fragment string -->
    <string name="map_fragment_text">Map</string>
    <string name="list_fragment_text">List</string>
    <string name="mates_fragment_text">Mates</string>

    <!-- GOOGLE MAP -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="default_info_title">title</string>
    <string name="default_info_snippet">snippet</string>
    <string name="map_error_connexion">It seems you have no connection availability</string>

    <!-- RecyclerView restaurants item -->
    <string name="opening_time">opening time</string>
    <string name="distance" translatable="false">%1$sm</string>
    <string name="nb_workmate_selection" translatable="false">(%1$s)</string>
    <string name="workmate_icon" translatable="false">workmate_icon</string>
    <string name="restaurant_type_address" translatable="false">%1$s - %2$s</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="restaurant_image">restaurant image</string>


    <!--RecyclerView workmates item-->
    <string name="workmate_default_decision"> %1$s hasn\'t decided yet</string>
    <string name="workmate_profil">workmates_profil</string>
    <string name="workmate_is_eating">%1$s is eating in %2$s</string>
    <string name="workmate_is_joining">%1$s is joining</string>

    <!-- Restaurant information -->
    <string name="call">CALL</string>
    <string name="like" translatable="false">LIKE</string>
    <string name="website">WEBSITE</string>

    <!--Extras-->
    <string name="dowloading">Downloading&#8230;</string>
    <string name="no_workmate_available">No workmate available</string>
    <string name="popup_title_permission_files_access">File is accessible</string>
    <string name="toast_title_no_image_chosen">No image chosen!</string>
    <string name="toast_message_geolocation">Make sure your device got map geolocation activated</string>
    <string name="allow_pick_picture_on_device">You have the right to access the picture on the device!</string>
    <string name="no_restaurants_available_check_the_map_view">No restaurants available&#8230; check the map view</string>
    <string name="phone_no_available">No phone number available</string>
    <string name="website_no_available">Website no available</string>
    <string name="manifest_restaurant_info">Restaurant information</string>
    <string name="manifest_settings">Settings</string>
    <string name="update_email">Update userEmail</string>
    <string name="search_restaurant">Search a restaurant</string>
    <string name="no_restaurant_found">No restaurant found!</string>

    <!-- Credits -->
    <string name="Icons_made_by_Freepik_from_flaticon_is_licensed_by_Creative_Commons_BY_3.0"> credit : licence by http://creativecommons.org/licenses/by/3.0/ made by http://www.freepik.com</string>
    <string name="default_notification_channel_id">notification channel</string>
    <string name="text_notification">It\'s time to lunch!</string>
    <string name="location_button_error">An error occurred, please click on map view button</string>
    <string name="save_place_selection">Choice saved</string>
    <string name="delete_place_selection">Choice canceled</string>
    <string name="search_workmates">Search workmates</string>
    <string name="restaurant_selection_availability">You haven\'t a restaurant selected today!</string>
    <string name="restaurant_like">Like</string>
    <string name="restaurant_no_like">Dislike</string>
    <string name="test">n\'a pas encore décidé</string>
    <string name="notification_enable">Notification enabled!</string>
    <string name="notification_disable">Notification disabled!</string>
</resources>
