<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.activities.RestaurantInfoActivity">

    <ImageView
        android:id="@+id/restaurant_info_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/floatingActionButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="16dp"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:backgroundTint="@color/white"-->
    <!--android:clickable="true"-->
    <!--android:focusable="true"-->
    <!--android:tint="@color/green"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/restaurant_info_photo"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/restaurant_info_photo"-->
    <!--app:layout_constraintVertical_bias="0.437"-->
    <!--app:srcCompat="@drawable/ic_check_circle" />-->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_info_photo">

    </RelativeLayout>

    <TextView
        android:id="@+id/restaurant_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/restaurant_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_info_photo" />


    <TextView
        android:id="@+id/restaurant_info_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_type_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_info_name" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:isIndicator="true"
        android:numStars="3"
        android:rating="3"
        android:stepSize="0.5"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@+id/restaurant_info_name"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_info_photo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@null"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_phone"
            android:text="@string/call"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@null"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_star_full"
            android:text="@string/like"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:background="@null"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_website"
            android:text="@string/website"

            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>

    <include
        layout="@layout/recycler_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>