<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.activities.SettingActivity">

    <!-- Picture PlaceHolder -->
    <ImageView
        android:id="@+id/placeholder"
        style="@style/MainStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_image"
        android:onClick="onClickSettingPicture"
        app:layout_constraintBottom_toTopOf="@+id/setting_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

    <!-- TextInput username -->
    <android.support.design.widget.TextInputEditText
        android:id="@+id/setting_username"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/update_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder" />


    <!-- Button update username -->
    <Button
        android:id="@+id/update_username"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_buttons"
        android:onClick="onClickUpdateUsernameButton"
        android:text="@string/update_user_name"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_username" />


    <!-- Button update delete -->
    <Button
        android:id="@+id/delete_account"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickDeleteButton"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/delete_account"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_username" />

    <!-- Separation -->
    <View
        android:id="@+id/view"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/switch_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account" />

    <!-- Switch button -->
    <Switch
        android:id="@+id/switch_button"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="185dp"
        android:layout_marginTop="8dp"
        android:text="@string/switch_notifications"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        android:theme="@style/switchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</android.support.constraint.ConstraintLayout>